// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inactive-color prop 1`] = `
<div role="switch" aria-checked="false" class="buri-switch" style="background-color: black;">
  <div class="buri-switch__node"></div>
</div>
`;

exports[`size prop 1`] = `
<div role="switch" aria-checked="false" class="buri-switch" style="font-size: 20px;">
  <div class="buri-switch__node"></div>
</div>
`;
